[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tiles/wall1.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/floor1.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/wall0.png" type="Texture" id=3]
[ext_resource path="res://blocks/Brick.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/bricks.wav" type="AudioStream" id=5]

[node name="Brick" type="StaticBody2D" groups=["bricks"]]
input_pickable = true
script = ExtResource( 4 )

[node name="SpriteFull" type="Sprite" parent="."]
modulate = Color( 0.823529, 0.784314, 0.729412, 1 )
position = Vector2( 8, 8 )
texture = ExtResource( 3 )

[node name="SpriteDamaged" type="Sprite" parent="."]
modulate = Color( 0.823529, 0.784314, 0.729412, 1 )
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="SpriteBroken" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.270588, 0.294118, 1 )
position = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 8, 8 )
polygon = PoolVector2Array( -5, -7, -7, -5, -7, 5, -5, 7, 5, 7, 7, 5, 7, -5, 5, -7 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 500.0

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
